--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
+    "cloudinary-react": "^1.8.1",
     "concurrent": "^0.3.2",
     "concurrently": "^8.2.2",
     "express": "^4.18.2",
