--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-scripts": "5.0.1",
     "react-super-responsive-table": "^5.2.2",
     "react-toast": "^1.0.3",
+    "redux-thunk": "^2.4.2",
     "video-react": "^0.16.0",
     "web-vitals": "^2.1.4"
   },
