--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
     "chart.js": "^4.4.0",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "chartjs-adapter-moment": "^1.0.1",
     "cloudinary-react": "^1.8.1",
     "concurrent": "^0.3.2",
     "concurrently": "^8.2.2",
+    "date-fns": "^2.30.0",
     "express": "^4.18.2",
     "nodemon": "^3.0.1",
     "react": "^18.2.0",
