--- a/.gitignore
+++ b/.gitignore
@@ -116,5 +116,5 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
-.DS_Store
+./DS_Store
 # End of https://mrkandreev.name/snippets/gitignore-generator/#Node
